# virus

./: .gitignore  Cargo.toml  README.md  nano.save  rust-toolchain.toml
.cargo/: config.toml
crates/common/: Cargo.toml
crates/common/src/: color.rs  cursor.rs  geom.rs  lib.rs  muck.rs
crates/editor/: Cargo.toml
crates/editor/examples/: ast.rs  chars.rs  fuzzy.rs  highlight.rs  nucleo.rs
crates/editor/src/: async_actor.rs  cursor.rs  document.rs  editor.rs  highlights.rs  language.rs  lib.rs  lsp.rs  mode.rs  rope.rs  rope2.rs  theme.rs  walk.rs
crates/editor/src/fuzzy/: byte.rs  mod.rs
crates/editor/src/rope/: extension.rs  text.rs
crates/editor/src/rope/cursor/: chunk.rs  grapheme.rs  word.rs
crates/editor/src/rope3/: extension.rs
crates/editor/src/rope3/cursor/: grapheme.rs  word.rs
crates/editor/src/syntax/: capture.rs  highlight.rs  theme.rs
crates/editor/treesitter/rust/: highlights.scm
crates/graphics/: Cargo.toml
crates/graphics/examples/: atlas.rs  download_noto_animated_emoji.rs  inspect_font.rs  wgpu.rs
crates/graphics/src/: colors.rs  lib.rs  main.rs  muck.rs  pixels_mut.rs
crates/graphics/src/text/: animated.rs  context.rs  font.rs  fonts.rs  glyph.rs  line.rs  mod.rs
crates/graphics/src/types/: color.rs  geom.rs
crates/graphics/src/wgpu/: atlas.rs  atlas2.rs  atlas3.rs  blur.rs  blur.wgsl  compose.wgsl  glyph.rs  line.rs  line.wgsl  lines.wgsl  macros.rs  mod.rs  rectangle.rs  text.rs  text.wgsl
crates/graphics/src/wgpu/atlas/: mod.rs  newnew.rs
crates/graphics/src/wgpu/atlas/new/: allocator.rs  first_fit_allocator.rs  mod.rs  next_fit_allocator.rs
crates/graphics/src/wgpu/new/: atlas.rs  glyph.rs  glyph.wgsl  line.rs  line.wgsl  mod.rs  rectangle.rs  rectangle.wgsl
crates/graphics/src/wgpu/text/: atlases.rs  buffers.rs  constants.rs  init.rs  mod.rs  pipeline.rs  shader.wgsl  vertices.rs
crates/graphics/src/wgpu/text/shaders/: compose.wgsl  shader.wgsl
crates/grappe/: Cargo.toml
crates/grappe/examples/: grappe.rs
crates/grappe/src/: builder.rs  cursor.rs  eol.rs  lib.rs  line.rs  meta.rs  text.rs  unicode.rs
crates/grappe/src/line/: cursor.rs  mod.rs  next_chars.rs  prev_chars.rs
crates/grappe/src/page/: builder.rs  meta.rs  mod.rs
crates/grappe/src/segment/: meta.rs  mod.rs
crates/grappe/src/text/: builder.rs  cursor.rs  meta.rs  mod.rs  next_chars.rs  prev_chars.rs  selection.rs
crates/lsp/: Cargo.toml
crates/lsp/examples/: lsp.rs
crates/lsp/src/: client.rs  clients.rs  lib.rs  types.rs
crates/lsp/src/lifecycle/: exit.rs  initialize.rs  initialized.rs  log_trace.rs  set_trace.rs  shutdown.rs
crates/lsp/src/protocol/: lsp.rs  rpc.rs
crates/lsp/src/transport/: lsp.rs  rpc.rs
crates/rope/: Cargo.toml
crates/rope/src/: buffer.rs  builder.rs  chunk.rs  cursor.rs  lib.rs  page.rs  selection.rs  text.rs  utils.rs
crates/text/: Cargo.toml
crates/text/examples/: sizes.rs  text.rs
crates/text/src/: buffer.rs  builder.rs  child.rs  cursor.rs  info.rs  internal.rs  lib.rs  text.rs  utils.rs
crates/ui/: Cargo.toml
crates/ui/src/: document_view.rs  lib.rs  theme.rs  tween.rs  ui.rs
crates/ui/src/views/: document.rs  files.rs
crates/utils/src/: lru.rs
crates/vigne/: Cargo.toml
crates/vigne/examples/: ex.rs
crates/vigne/src/: cursor.rs  document.rs  language.rs  lib.rs
crates/vin/: Cargo.toml
crates/vin/src/: buffer.rs  context.rs  fonts.rs  line.rs  main.rs  text.rs
crates/virus/: Cargo.toml
crates/virus/examples/: ex.rs
crates/virus/src/: events.rs  fps.rs  main.rs  shape.rs  virus.rs
crates/wine/: Cargo.toml
crates/wine/src/: buffer.rs  font.rs  glyph.rs  line.rs  main.rs
xtask/: Cargo.toml
xtask/src/lsp/: fake.rs  mod.rs  types.rs  utils.rs
xtask/src/lsp/generator/: client.rs  enumerations.rs  notifications.rs  requests.rs  server.rs  structures.rs  type_aliases.rs
