[workspace]
resolver = "2"                     # Important! wgpu needs this!
members = ["crates/*"]
default-members = ["crates/virus"]

[workspace.package]
authors = ["Romain TRUCHI"]
edition = "2021"

[workspace.dependencies]
virus-common = { path = "crates/common", package = "common" }
virus-editor = { path = "crates/editor", package = "editor" }
virus-graphics = { path = "crates/graphics", package = "graphics" }
virus-ui = { path = "crates/ui", package = "ui" }

lru = "0.9.0"
pixels = "0.12"
swash = "0.1.6"
winit = "0.28"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
ropey = "1.6"
unicode-segmentation = "1.10"
unicode-width = "0.1"
tween = "2.0.1"
wgpu = "0.16"
pollster = "0.3"
bytemuck = "1.13"

[profile.dev]
# Remove debug stuff in the binary
debug = false
strip = true

# Trying to improve dev performance, but I don't see any effects...
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 3
debug-assertions = false
overflow-checks = false
codegen-units = 16
