[workspace]
resolver = "2"                     # Important! wgpu needs this!
members = ["crates/*"]
default-members = ["crates/virus"]

[workspace.package]
authors = ["Romain TRUCHI"]
edition = "2021"

[workspace.dependencies]
virus-common = { path = "crates/common", package = "common" }
virus-editor = { path = "crates/editor", package = "editor" }
virus-graphics = { path = "crates/graphics", package = "graphics" }
virus-ui = { path = "crates/ui", package = "ui" }

bytemuck = "1.16"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
ropey = "1.6"
swash = "0.1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tween = "2.0"
unicode-segmentation = "1.11"
unicode-width = "0.1"
wgpu = "0.20"
winit = "0.30"

[profile.dev]
# Remove debug stuff in the binary
debug = false
strip = true

# Trying to improve dev performance, but I don't see any effects...
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 3
debug-assertions = false
overflow-checks = false
codegen-units = 16
