[workspace]
resolver = "2"                     # Important! wgpu needs this!
default-members = ["crates/virus"]
members = ["crates/*"]
exclude = ["xtask"]

[workspace.package]
authors = ["Romain TRUCHI"]
edition = "2021"

[workspace.dependencies]
virus-editor = { path = "crates/editor", package = "editor" }
virus-graphics = { path = "crates/graphics", package = "graphics" }
virus-lsp = { path = "crates/lsp", package = "lsp" }
virus-ui = { path = "crates/ui", package = "ui" }

bytemuck = "1.16"
futures = "0.3"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swash = "0.1"
tokio = { version = "1.38", features = ["full"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tween = "2.0"
unicode-segmentation = "1.11"
unicode-width = "0.1"
url = "2.5"
wgpu = "0.20"
winit = "0.30"

[profile.dev]
# Remove debug stuff in the binary
debug = false
strip = true

# Trying to improve dev performance, but I don't see any effects...
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 3
debug-assertions = false
overflow-checks = false
codegen-units = 16
