[package]
name = "editor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
ropey.workspace = true
tree-sitter-rust.workspace = true
tree-sitter.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
virus-graphics.workspace = true

nucleo = "0.5.0"
