[package]
name = "graphics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
virus-common.workspace = true

swash.workspace = true
lru.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = "0.11.18"
image = "0.24.6"
futures = "0.3.28"
