[package]
name = "ui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
virus-common.workspace = true
virus-editor.workspace = true
virus-graphics.workspace = true

ropey.workspace = true
swash.workspace = true
pixels.workspace = true
winit.workspace = true
tween.workspace = true
